--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ github_username:  maffity
 collections:
   portfolio:
     output: true
+    permalink: /foo/:collection/:path/
 
 # Build settings
 markdown: kramdown
