Initial wishlist work

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.katiemkblaede.com" # the base hostname & protocol for your site
 twitter_username: katiemkblaede
 github_username:  maffity
+
 collections:
   portfolio:
+    title: Portfolio
+    output: true
+    permalink: /:collection/:path/
+  wishlist:
+    title: Wishlist
     output: true
     permalink: /:collection/:path/
 
